--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "Ville Hänninen",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "morgan": "^1.9.0"
   },
   "devDependencies": {
     "nodemon": "^1.14.12"
